[tool.poetry]
name = "sauron-rule-engine"
version = "2.0.0"
description = "A simple rule engine implemented in python"
authors = ["jlugao <joaolhullier@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jlugao/sauron-rule-engine"
license = "MIT"
packages = [
  { include = "sauron" },
  ]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10"
"ruamel.yaml" = "^0.18"
blinker = "^1.4"
pylint = "^2.3"
mkdocs-material = "^7.1.11"
zuban = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
coverage = "^7.0"
coveralls = "<4.0"
ruff = "^0.8"
pre-commit = {version = "*", allow-prereleases = true}
pytest-cov = "^5.0"
ipython = "^7.16"
pylint = "^2.3"
rope = "^0.14.0"
mkdocs = "^1.2.3"
markdown-include = "^0.5.1"
fastapi = "^0.109.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
poethepoet = "^0.39.0"

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E203", "E266", "E501"]

[tool.poe.tasks]
test = "poetry run pytest"
test-cov = "poetry run pytest --cov=sauron --cov-report=html"
ruff = "poetry run ruff check sauron/ tests/"
format = "poetry run ruff format sauron/ tests/"
formatcheck = "poetry run ruff format --check sauron/ tests/"
lint-fix = "poetry run ruff check --fix sauron/ tests/"
typecheck = "poetry run zuban check"
pre-commit = "poetry run pre-commit run --all-files"
docs-build = "poetry run mkdocs build"
docs-serve = "poetry run mkdocs serve"
check-all = ["lint", "format", "typecheck", "test"]

[tool.poe.tasks.lint]
sequence = ["ruff", "formatcheck", "typecheck"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

